# waytous-cli

./: Cargo.toml  _waytous  meta.db  waytous.bash
src/: cli.rs  main.rs  subcommand_define.rs  waytous.rs
src/cmd/: artifact.rs  autocompletion.rs  mod.rs  module.rs  package.rs
src/commands/: artifact.rs  autocompletion.rs  mod.rs  module.rs  supervisord.rs
src/common/: common.rs  mod.rs
