# 包信息
[package]
name = "waytous"
version = "0.1.0"
edition = "2021"

# 第三方依赖库
[dependencies]
clap = {version = "4.0.0", features = ["derive"]}
clap_complete = "4.0.0"
serde = {version = "1.0.0", features = ["derive"]}
comfy-table = "7.0.0"
colored = "2.0.0"
log = "0.4.22"
walkdir = "2.0.0"
fern = { version = "0.6.0", features = ["colored"] }
toml = "0.8.0"

# 打包操作
[package.metadata.deb]
name = "waytous-cli"
maintainer = "daojin.xu101@gmail.com"
description = "waytous autopilot command tools"
depends = "$auto"
priority = "optional"
copyright = "daojin.xu101@gmail.com"
